--- a/styles.css
+++ b/styles.css
@@ -294,6 +294,11 @@ body {
   background: var(--white);
   min-height: 100vh;
   color: var(--black);
+
+    /* display: flex; */
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
 }
 a {
   color: var(--black);
@@ -326,7 +331,105 @@ p {
 }
 
 
-
+/* blog / Article  start */
+::selection{
+  background: rgb(0,123,255,0.3);
+}
+.wrapper{
+  align-items: center;
+  justify-content: center;
+  max-width: 600px;
+  padding: 0 20px;
+}
+.wrapper .parent-tab,
+.wrapper .child-tab{
+  margin-bottom: 8px;
+  border-radius: 3px;
+  box-shadow: 0px 0px 15px rgba(0,0,0,0.18);
+}
+.wrapper .parent-tab label,
+.wrapper .child-tab label{
+  background: #303030;
+  padding: 10px 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+  border-radius: 3px;
+  position: relative;
+  z-index: 99;
+  transition: all 0.3s ease;
+}
+.wrapper .parent-tab label:hover{
+  background: #242323;
+}
+.parent-tab input:checked ~ label,
+.child-tab input:checked ~ label{
+  border-radius: 3px 3px 0 0;
+  background: #000000;
+}
+.wrapper label span{
+  color: #ffffff;
+  font-size: 18px;
+  font-weight: 500;
+  text-shadow: 0 -1px 1px #df774e;
+}
+.wrapper .child-tab label span{
+  font-size: 17px;
+}
+.parent-tab label .icon{
+  position: relative;
+  height: 30px;
+  width: 30px;
+  font-size: 15px;
+  color: #ffffff;
+  display: block;
+  background: #000000;
+  border-radius: 50%;
+  text-shadow: 0 -1px 1px #ffffff;
+}
+.wrapper .child-tab label .icon{
+  height: 27px;
+  width: 27px;
+}
+.parent-tab label .icon i{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.parent-tab input:checked ~ label .icon i:before,
+.child-tab input:checked ~ label .icon i:before{
+  content: '\f068';
+}
+.wrapper .parent-tab .contentq,
+.wrapper .child-tab .sub-content{
+  max-height: 0px;
+  overflow: hidden;
+  background: #3a3a3a;
+  border-radius: 0 0 3px 3px;
+  transition: all 0.4s ease;
+}
+.parent-tab input:checked ~ .contentq,
+.child-tab input:checked ~ .sub-content{
+  max-height: 100vh;
+}
+.tab-3 input:checked ~ .content{
+  padding: 15px 20px;
+}
+.parent-tab .content p,
+.child-tab .sub-content p{
+  padding: 15px 20px;
+  font-size: 16px;
+}
+.child-tab .sub-content p{
+  font-size: 15px;
+}
+input[type="radio"],
+input[type="checkbox"]{
+  display: none;
+}
+/* blog / Article Over */
 
 
 
@@ -527,15 +630,7 @@ img {
   border-radius: 50%;
   overflow: hidden;
 }
-/* .img-container img {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  bottom: 0;
-  border-radius: 50%;
-  width: 80%;
-  border: 0.3rem solid var(--primary-pink);
-} */
+
 .img {
   margin-top: 2rem;
   height: 3rem;
@@ -547,35 +642,6 @@ img {
   margin: 0 0.5rem;
   display: inline-block;
 }
-/* footer .footer-social a {
-  margin: 0 0.5rem;
-  font-size: 2rem;
-  color: #fff;
-  transition: color 0.2s;
-}
-footer .footer-social a:hover {
-  color: var(--primary-pink);
-} */
-/* input, textarea {
-  width: 100%;
-  border-radius: 0.2rem;
-  padding: 0.9rem 1rem;
-  resize: none;
-  font-size: 1.4rem;
-  margin: 0.5rem 0;
-}
-input:focus, textarea:focus {
-  outline: 0.1rem solid var(--primary-pink);
-} */
-/* .footer-section {
-  padding: 1rem 0;
-  text-align: center;
-  color: #fff;
-}
-.footer-section pre {
-  color: #fff;
-  font-size: 1.2rem;
-} */
 
 /* Education Styles */
 .zcontainer {
@@ -922,14 +988,6 @@ header .navbar ul li a:hover, header .navbar ul li a:focus {
     .yFooterLinks a:hover {
       color: #ffffff;
     }
-
-    /* .yFooterSocial {
-      margin-bottom: 20px;
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      flex-wrap: wrap;
-    } */
 
     a {
       color: #ffbd39;
